# Tungsten

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
cmake/emscripten/: FinOpenGL.cmake  FindGLEW.cmake  FindOpenGL.cmake  FindSDL2.cmake  FindSDL3.cmake
docs/: scene_graph_chat.md  scene_graph_design.md
docs/diagrams/src/: Commands.puml  ShaderProgram.puml  scene_graph.mermaid
examples/: CMakeLists.txt
examples/cube/: CMakeLists.txt  Cube.cpp  MeshItem.cpp  MeshItem.hpp  PhongMesh.cpp  PhongMesh.hpp
examples/fading_blob/: Basic2D-frag.glsl  Basic2D-vert.glsl  CMakeLists.txt  README.txt  Resources.cpp.in  Resources.hpp  SceneFader-frag.glsl  SceneFader-vert.glsl  SceneFader.cpp  SceneFader.hpp  Shape2D.cpp  Shape2D.hpp  fading_blob.cpp
examples/show_text/: CMakeLists.txt  Debug.hpp  show_text.cpp
examples/spinning_something/: CMakeLists.txt  SceneFader.cpp  SceneFader.hpp  Shape2D.cpp  Something.cpp
examples/textured_cube/: CMakeLists.txt  MeshItem.cpp  MeshItem.hpp  Resources.hpp.in  TexturedCube.cpp
examples/touch_events/: CMakeLists.txt  MouseWheelEventThrottler.cpp  MouseWheelEventThrottler.hpp  MultiGestureEventThrottler.cpp  MultiGestureEventThrottler.hpp  RingBuffer.hpp  touch_events.cpp
examples/touch_events/emscripten/: index.css  index.html.in
include/Tungsten/: ArrayBuffer.hpp  ArrayBufferBuilder.hpp  Buffer.hpp  Camera.hpp  ColoredMaterial.hpp  DeviceInfo.cpp  DeviceInfo.hpp  DummyOglWrapper.hpp  Environment.hpp  EventLoop.hpp  EventLoopCallbacks.hpp  Font.hpp  FontManager.hpp  GlBuffer.hpp  GlContext.hpp  GlError.hpp  GlFrameBuffers.hpp  GlFramebuffer.hpp  GlHandle.hpp  GlParameters.hpp  GlProgram.hpp  GlRendering.hpp  GlShader.hpp  GlStateManagement.hpp  GlTexture.hpp  GlTextures.hpp  GlTypes.hpp  GlUniform.hpp  GlVersion.hpp  GlVertexArray.hpp  GlVertices.hpp  GouraudShaderProgram.hpp  IOglWrapper.hpp  Lights.hpp  MeshDataBuilder.hpp  MeshShapes.hpp  MeshUtilities.hpp  PhongShader.hpp  PhongShaderProgram.hpp  PositionNormalShapes.cpp  (+36 more)
include/Tungsten/Commands/: Command.cpp  Command.hpp  CompositeCommand.cpp  CompositeCommand.hpp  DrawElementsCommand.cpp  DrawElementsCommand.hpp
include/Tungsten/Detail/: GenericBitmaskOperators.hpp
include/Tungsten/Gl/: DummyOglWrapper.hpp  GlBuffer.hpp  GlHandle.hpp  GlProgram.hpp  GlRendering.hpp  GlShader.hpp  GlStateManagement.hpp  GlTexture.hpp  GlTypes.hpp  GlUniform.hpp  GlVertexArray.hpp  IOglWrapper.hpp
include/Tungsten/Render/: Font.hpp  FontManager.hpp  Materials.hpp  Renderable.hpp  ShaderPreprocessor.hpp  ShaderProgramBuilder.hpp  ShaderTools.hpp  TextItem.hpp  TextRenderer.hpp  TextStyleData.hpp  VertexArrayObject.hpp  VertexArrayObjectBuilder.hpp  VertexAttributeType.hpp
include/Tungsten/Sdl/: SdlApplication.hpp  SdlGlContext.hpp  SdlGlParameters.hpp  WindowParameters.hpp
include/Tungsten/ShaderPrograms/: BlinnPhongShader.hpp  GouraudShader.hpp  LightUniforms.hpp  MaterialUniforms.hpp  PhongShader.hpp  ShaderProgram.hpp  SmoothMeshShader.hpp  SmoothShader.hpp  TexturedBlinnPhongShader.hpp  TexturedGouraudShader.hpp  TexturedPhongShader.hpp  TexturedSmoothMeshShader.hpp
include/Tungsten/ShaderPrograms2/: ShaderProgram.hpp
include/Tungsten/Shapes/: AddCube.hpp  AddRectangle.hpp  AddRegularPolygon.hpp  AddStarPolygon.hpp  ArrayBufferBuilder.hpp  ArrayBufferRowBuilder.hpp  RegularPolygonGenerator.hpp
src/Tungsten/: ArrayBufferBuilder.cpp  BuddyAllocator.cpp  Camera.cpp  ColoredMaterial.cpp  CommandLine.cpp  CommandLine.hpp  DeviceInfo.cpp  ExceptionHelpers.cpp  ExceptionHelpers.hpp  Font.cpp  FontManager.cpp  FontUtilities.cpp  FontUtilities.hpp  GlBuffer.cpp  GlContext.cpp  GlError.cpp  GlFrameBuffers.cpp  GlFramebuffer.cpp  GlParameters.cpp  GlProgram.cpp  GlRendering.cpp  GlShader.cpp  GlStateManagement.cpp  GlTexture.cpp  GlTextures.cpp  GlTypeConversion.cpp  GlTypeConversion.h  GlTypeConversion.hpp  GlUniform.cpp  GlVersion.cpp  GlVertexArray.cpp  GlVertices.cpp  IOglWrapper.cpp  IOpenGlWrapper.h  Materials.cpp  MeshShapes.cpp  MeshUtilities.cpp  Monaco32.hpp  Monaco64.hpp  OglWrapper.h  (+35 more)
src/Tungsten/Detail/: BuddyAllocator.cpp  BuddyAllocator.hpp  DelimiterFinders.hpp  StringDelimiterIterator.hpp
src/Tungsten/EventThrottlers/: EventMerger.hpp  EventMerger_MultiGestureEvent.cpp  EventMerger_MultiGestureEvent.hpp  EventThrottler.cpp  EventThrottler.hpp  MouseWheelEventMerger.cpp  MouseWheelEventMerger.hpp  MultiGestureEventMerger.cpp  MultiGestureEventMerger.hpp
src/Tungsten/Gl/: GlBuffer.cpp  GlFramebuffer.cpp  GlProgram.cpp  GlRendering.cpp  GlShader.cpp  GlStateManagement.cpp  GlTexture.cpp  GlTypeConversion.cpp  GlTypeConversion.hpp  GlUniform.cpp  GlVertexArray.cpp  GlVertices.cpp  IOglWrapper.cpp  OglWrapper.hpp  TracingOglWrapper.hpp
src/Tungsten/Neo/: BufferArena.cpp  BufferArena.hpp  DeletionQueue.cpp  DeletionQueue.hpp  GlStateCache.cpp  GlStateCache.hpp  LayoutRegistry.cpp  LayoutRegistry.hpp  LightData.cpp  LightData.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderItem.cpp  RenderItem.hpp  RenderSnapshot.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceRef.hpp  ResourceRefs.hpp  ShaderFamily.hpp  ShaderProgram.hpp  ShaderVariantKey.hpp  SharedBuffer.hpp  Texture.hpp  UboBindings.hpp  VaoCache.cpp  VaoCache.hpp  VertexAttribute.hpp  VertexLayout.hpp  VertexStream.hpp
src/Tungsten/Render/: Font.cpp  FontManager.cpp  FontUtilities.cpp  FontUtilities.hpp  Materials.cpp  ShaderManager.cpp  ShaderPreprocessor.cpp  ShaderProgram.cpp  ShaderProgramBuilder.cpp  ShaderSources.cpp.in  ShaderSources.hpp  ShaderTools.cpp  TextItem.cpp  TextRenderer.cpp  TextUtilities.cpp  TextUtilities.hpp  VertexArrayObject.cpp  VertexArrayObjectBuilder.cpp  VertexAttributeType.cpp
src/Tungsten/Sdl/: CommandLine.cpp  SdlApplication.cpp  SdlDisplay.cpp  SdlGlContext.cpp  SdlSession.cpp  (+1 more)
tests/TungstenTest/: CMakeLists.txt  test_BuddyAllocator.cpp  test_FontUtilities.cpp  test_TextUtilities.cpp  text_Font.cpp
tools/: make_cpp_string.py
tools/cmake/: TungstenTargetEmbedShaders.cmake  make_cpp_string.py
(+60 files in other folders)
