# ===========================================================================
# Copyright © 2025 Jan Erik Breimo. All rights reserved.
# Created by Jan Erik Breimo on 2025-12-03.
#
# This file is distributed under the Zero-Clause BSD License.
# License text is included with the source distribution.
# ===========================================================================
add_subdirectory(cube)
add_subdirectory(show_text)
add_subdirectory(fading_blob)
add_subdirectory(touch_events)
